syntax = "proto2";

package advantage.protos;

import "advantage/protos/approximators/deep_dense.proto";
import "advantage/protos/approximators/deep_convolutional.proto";

enum Optimizer {
    NoOptimizer = 0;
    AdamOptimizer = 1;
    GradientDescentOptimizer = 2;
}

message Approximators {
    oneof approximator {
        DeepConvolutional deepConvolutional = 1 ;
        DeepDense deepDense = 2;
    }

    required string name_scope = 4;

    optional Optimizer optimizer = 5;

    required float learning_rate = 6;

}
