syntax = "proto2";

package advantage.protos;


message Value {
    required uint32 num_actions = 1;
}

message Multinomial{
    required uint32 num_actions = 1;
}

message Binomial {
}

message Gaussian {
    required uint32 action_dimension = 1;
}
