syntax = "proto2";


package advantage.protos;

import "advantage/protos/approximators/base/blocks.proto";

enum Padding {
    valid = 1;
    same = 2;
}

message DeepConvolutional {
    repeated ConvolutionalBlock block = 1;
}

message ConvolutionalBlock {
    optional Activation activation = 1 [default = NONE ];

    required uint32 num_filters = 2;

    optional uint32 stride = 3 [default = 1];

    required uint32 kernelH = 4;
    required uint32 kernelW = 5;

    optional Padding padding = 6 [default=valid];

    optional Initializer initializer = 7 [default=variance_scaling_initializer];
}
